k8s/traefik/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: url-shortener
spec:
  entryPoints:
    - web
  routes:
   - match: Host(`localhost`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
     kind: Rule
     services:
      - name: api@internal
        kind: TraefikService
